2007-12-02  Alan Caulkins <fatman@maxint.net>

	Make it possible to close listening sockets.

	* swank.lisp (stop-server, restart-server): New functions.
	(*listener-sockets*): New variable.
	(setup-server): Store open sockets in *listener-sockets*.

2007-12-02  Helmut Eller  <heller@common-lisp.net>
	
	Add hook to customize the region used by C-c C-c.
	Useful to recognize block declarations in CMUCL sources.

	* slime.el (slime-region-for-defun-function): New variable.
	(slime-region-for-defun-at-point): Use it.

2007-11-30  Helmut Eller  <heller@common-lisp.net>

	Handle byte-functions without debug-info.

	* swank-cmucl.lisp (byte-function-location): Return an error
	if the component has no debug-info.

2007-11-30  Helmut Eller  <heller@common-lisp.net>

	Disable the pretty-printer for backtraces.
	Would be nice if we could print newlines in strings as \n.

	* swank.lisp (*backtrace-printer-bindings*):  New varaible.
	(backtrace, frame-locals-for-emacs): Use it.

2007-11-29  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (valid-function-name-p): Fixed wrt. setf functions.

2007-11-29  Helmut Eller  <heller@common-lisp.net>

	Prettify package names for slime-repl-set-package.

	* slime.el (slime-repl-set-package): slime-current-package may
	have leading colons.  Use slime-pretty-package-name to remove
	them.  Reported by Constantine Vetoshev.
	(slime-pretty-current-package): New function.
	(slime-set-package): Use it.

2007-11-24  Helmut Eller  <heller@common-lisp.net>

	Drop remaining dependencies on nregex.

	* swank-lispworks.lisp (unmangle-unfun): Use sys::setf-symbol-p
	instead of regexp matching.

	* swank-loader.lisp (*sysdep-files*): Don't include nregex.

2007-11-24  Helmut Eller  <heller@common-lisp.net>

	Mirror *modules* in Emacs.

	* slime.el (slime-lisp-modules): New connction variable.
	(slime-set-connection-info): Load requested modules.
	(slime-required-modules): New variable.
	(slime-require, slime-load-contribs): New functions.
